[tool.poetry]
name = "cdp-crm"
version = "0.1.0"
description = "Collision risk modelling of the Climb/Descend Procedure"
authors = ["figuetbe <benoit.figuet@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9 <3.13"
numpy = "^1.26.2"
scipy = "^1.11.3"
plotly = "^5.18.0"
notebook = "^7.0.6"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
